--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,10 +64,10 @@
             <TextView
                 android:id="@+id/quantity_text_view"
                 android:textAppearance="@style/TextView"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_weight="1"
+                android:layout_weight="1.5"
                 android:paddingLeft="8dp"
                 android:paddingRight="8dp"
                 android:text="2"
